# projectTemplate

CPP_include_src_demo/: CMakeLists.txt
CPP_include_src_demo/demo/: CMakeLists.txt
CPP_include_src_demo/src/: CMakeLists.txt
Rcpp/: CMakeLists.txt
Rcpp/api/: CMakeLists.txt  myRcppFun.cpp
Rcpp/include/: MyClass.h
Rcpp/src/: CMakeLists.txt  MyClass.cpp
